--- a/SPI-AOI/Views/ModelManagement/AutoAdjustFOVWindow.xaml
+++ b/SPI-AOI/Views/ModelManagement/AutoAdjustFOVWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:SPI_AOI.Views.ModelManagement"
         mc:Ignorable="d"
         Initialized="Window_Initialized"
+        Closing="Window_Closing"
         WindowStartupLocation="CenterScreen"
         Title="Auto Adjust FOV" 
         Height="900" Width="1600"
@@ -62,6 +63,9 @@
                                 <StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5" HorizontalAlignment="Right">
                                         <Button x:Name="btAdjust" Content="Adjust" Margin="0,0,0,0" Width="110" Height="30" Click="btAdjust_Click"></Button>
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal" Margin="5" HorizontalAlignment="Right">
+                                        <Button x:Name="btAdjustPad" Content="Adjust" Margin="0,0,0,0" Width="110" Height="30" Click="btAdjustPad_Click"></Button>
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5" HorizontalAlignment="Right">
                                         <Button x:Name="btAutoAdjust" Content="Auto Adjust All" Width="110" Height="30" Click="btAutoAdjust_Click"></Button>
