--- a/SPI-AOI/Views/ModelManagement/AutoAdjustFOVWindow.xaml
+++ b/SPI-AOI/Views/ModelManagement/AutoAdjustFOVWindow.xaml
@@ -62,13 +62,13 @@
                             <Grid Grid.Column="1">
                                 <StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5" HorizontalAlignment="Right">
-                                        <Button x:Name="btAdjust" Content="Adjust" Margin="0,0,0,0" Width="110" Height="30" Click="btAdjust_Click"></Button>
+                                        <Button x:Name="btAdjust" Content="Adjust FOV" Margin="0,0,0,0" Width="110" Height="30" Click="btAdjust_Click"></Button>
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5" HorizontalAlignment="Right">
-                                        <Button x:Name="btAdjustPad" Content="Adjust" Margin="0,0,0,0" Width="110" Height="30" Click="btAdjustPad_Click"></Button>
+                                        <Button x:Name="btAdjustPad" Content="Adjust Pad" Margin="0,0,0,0" Width="110" Height="30" Click="btAdjustPad_Click"></Button>
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5" HorizontalAlignment="Right">
-                                        <Button x:Name="btAutoAdjust" Content="Auto Adjust All" Width="110" Height="30" Click="btAutoAdjust_Click"></Button>
+                                        <Button x:Name="btAutoAdjust" Content="Auto Adjust All FOV" Width="110" Height="30" Click="btAutoAdjust_Click"></Button>
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5" HorizontalAlignment="Right">
                                         <Button x:Name="btAutoAdjustPad" Content="Auto Adjust All Pad" Width="110" Height="30" Click="btAutoAdjustPad_Click"></Button>
@@ -89,7 +89,6 @@
                                 </StackPanel>
                             </Grid>
                         </Grid>
-                        
                     </StackPanel>
                 </GroupBox>
             </Grid>
