--- a/SPI-AOI/Views/Histories/HistoryWindow.xaml
+++ b/SPI-AOI/Views/Histories/HistoryWindow.xaml
@@ -26,6 +26,7 @@
                         <Grid.RowDefinitions>
                             <RowDefinition Height="180"/>
                             <RowDefinition Height="1*"/>
+                            <RowDefinition Height="80"/>
                         </Grid.RowDefinitions>
                         <Grid Grid.Row="0">
                             <GroupBox Header="Options" Margin="5">
@@ -66,6 +67,16 @@
                                     </DataGrid.Columns>
                                 </DataGrid>
                             </GroupBox>
+                        </Grid>
+                        <Grid Grid.Row="2">
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                                <Button x:Name="btExportExcel" Click="btExportExcel_Click" Width="160" Height="50" Margin="10">
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Source="../../Resources/Icons/ExportExcel.png" Width="30" Height="30"></Image>
+                                        <Label Content="Export Excel" FontSize="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"></Label>
+                                    </StackPanel>
+                                </Button>
+                            </StackPanel>
                         </Grid>
                     </Grid>
 
